Adição rodapé - Atividade 10.html

--- a/Atividade de sala/Aula 10 - Media Escolar.html
+++ b/Atividade de sala/Aula 10 - Media Escolar.html
@@ -22,5 +22,9 @@
     </div>
         <p id="resultado"></p>
     
+    <footer class="footer">
+        <hr>
+        <p>Desenvolvido por: <strong>Matheus Melo</strong> | &copy; 2025</p>
+    </footer>
 </body>
 </html>
