Aula 11 - Adição de vídeo

--- a/Atividade de sala/Aula 10 - Media Escolar.html
+++ b/Atividade de sala/Aula 10 - Media Escolar.html
@@ -21,10 +21,10 @@
         <button type="button" onclick="calcularMedia()">Calcular Média</button>
     </div>
         <p id="resultado"></p>
-    
+   
     <footer class="footer">
         <hr>
-        <p>Desenvolvido por: <strong>Matheus Melo</strong> | &copy; 2025</p>
+        <p>Desenvolvido por: <strong>Matheus Melo Nascimento</strong> | &copy; 2025</p>
     </footer>
 </body>
 </html>
